--- a/wercker.yml
+++ b/wercker.yml
@@ -6,4 +6,6 @@ build:
     - script:
         name: "Refresh dependencies & Build"
         code: |
+          git submodule init
+          git submodule update
           ./gradlew --refresh-dependencies
