--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ buildscript {
 }
 
 group 'com.github.jonathanxd'
-version '3.0.1-SNAPSHOT'
+version '3.0.1-a'
 
 apply from: project(":CodeAPI").file("gradle/common.gradle")
 
@@ -27,4 +27,8 @@ dependencies {
     compile 'com.github.JonathanxD:BytecodeDisassembler:1.0-r3'
     compile group: 'org.ow2.asm', name: 'asm-all', version: '5.1'
     testCompile project(path: ':CodeAPI', configuration: 'tests')
+}
+
+dokka {
+    enabled = false
 }
