--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ buildscript {
 }
 
 group 'com.github.jonathanxd'
-version '3.0.2-a'
+version '3.0.2-b'
 
 apply from: project(":CodeAPI").file("gradle/common.gradle")
 
