--- a/build.gradle
+++ b/build.gradle
@@ -18,13 +18,13 @@ buildscript {
 }
 
 group 'com.github.jonathanxd'
-version '3.0.2-c'
+version '3.0.2-d'
 
 apply from: project(":CodeAPI").file("gradle/common.gradle")
 
 dependencies {
     compile project(":CodeAPI")
-    compile 'com.github.JonathanxD:BytecodeDisassembler:2.0'
+    compile 'com.github.JonathanxD:BytecodeDisassembler:2.0-a'
     compile group: 'org.ow2.asm', name: 'asm-all', version: '5.1'
     testCompile project(path: ':CodeAPI', configuration: 'tests')
 }
