Disabled cast of void types (resolves unnecessary 'checkcast' instructions to cast a Constructor Invocation to Expected Argument Type).

--- a/build.gradle
+++ b/build.gradle
@@ -18,13 +18,13 @@ buildscript {
 }
 
 group 'com.github.jonathanxd'
-version '3.0.2-d'
+version '3.0.2-e'
 
 apply from: project(":CodeAPI").file("gradle/common.gradle")
 
 dependencies {
     compile project(":CodeAPI")
-    compile 'com.github.JonathanxD:BytecodeDisassembler:2.0-a'
+    compile 'com.github.JonathanxD:BytecodeDisassembler:2.0.2'
     compile group: 'org.ow2.asm', name: 'asm-all', version: '5.1'
     testCompile project(path: ':CodeAPI', configuration: 'tests')
 }
