--- a/build.gradle
+++ b/build.gradle
@@ -18,13 +18,13 @@ buildscript {
 }
 
 group 'com.github.jonathanxd'
-version '3.0.3-hotfix4'
+version '3.1.0'
 
 apply from: project(":CodeAPI").file("gradle/common.gradle")
 
 dependencies {
     compile project(":CodeAPI")
-    compile 'com.github.JonathanxD:BytecodeDisassembler:2.0.3-c2'
+    compile 'com.github.JonathanxD:BytecodeDisassembler:2.0.3-d'
     compile group: 'org.ow2.asm', name: 'asm-all', version: '5.1'
     testCompile project(path: ':CodeAPI', configuration: 'tests')
 }
