--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ buildscript {
 }
 
 group 'com.github.jonathanxd'
-version '3.1.6-3.1.5'
+version '3.2.0-3.2.0'
 
 apply from: project(":CodeAPI").file("gradle/common.gradle")
 
@@ -31,4 +31,13 @@ dependencies {
 
 dokka {
     enabled = false
+}
+
+shadowJar {
+    dependencies {
+        include(project(":CodeAPI"))
+        include(dependency("org.ow2.asm:asm-all"))
+        include(dependency("com.github.JonathanxD:BytecodeDisassembler"))
+        include(dependency("com.github.JonathanxD:JwIUtils"))
+    }
 }
