--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ buildscript {
 }
 
 group 'com.github.jonathanxd'
-version '3.2.5-3.2.0-a'
+version '3.2.7-3.2.0'
 
 apply from: project(":CodeAPI").file("gradle/common.gradle")
 
