Updated to work with change of annotation Array property to Array list property (but now is hybrid until CodeAPI-JavaValidator is not ready).
Added ClassSave Utility

--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ apply from: project(":CodeAPI").file("gradle/common.gradle")
 
 dependencies {
     compile project(":CodeAPI")
-    compile 'com.github.JonathanxD:BytecodeDisassembler:2.0.3u'
+    compile 'com.github.JonathanxD:BytecodeDisassembler:2.0.4b'
     compile group: 'org.ow2.asm', name: 'asm-all', version: '5.2'
     testCompile project(path: ':CodeAPI', configuration: 'tests')
 }
