--- a/build.gradle
+++ b/build.gradle
@@ -23,8 +23,8 @@ apply from: project(":CodeAPI").file("gradle/common.gradle")
 
 dependencies {
     compile project(":CodeAPI")
-    compile 'com.github.JonathanxD:BytecodeDisassembler:2.0.4b'
-    compile group: 'org.ow2.asm', name: 'asm-all', version: '5.2'
+    compile 'com.github.JonathanxD:BytecodeDisassembler:2.0.5'
+    compile group: 'org.ow2.asm', name: 'asm-all', version: '6.0_BETA'
     testCompile project(path: ':CodeAPI', configuration: 'tests')
 }
 
