--- a/build.gradle
+++ b/build.gradle
@@ -17,12 +17,13 @@ buildscript {
 }
 
 group 'com.github.jonathanxd'
-version '4.0.0-4.0.0'
+version '4.0.0.1-beta-bytecode'
 
 apply from: project(":CodeAPI").file("gradle/common.gradle")
 
 dependencies {
-    compile project(":CodeAPI")
+    compileOnly project(":CodeAPI")
+    runtime "com.github.JonathanxD:CodeAPI:4.0.0.1-beta"
     compile 'com.github.JonathanxD:BytecodeDisassembler:2.0.5'
     compile group: 'org.ow2.asm', name: 'asm-all', version: '6.0_BETA'
     testCompile project(path: ':CodeAPI', configuration: 'tests')
