--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,8 @@ dependencies {
     runtime "com.github.JonathanxD:CodeAPI:4.0.0.1-beta"
     compile 'com.github.JonathanxD:BytecodeDisassembler:2.0.5'
     compile group: 'org.ow2.asm', name: 'asm-all', version: '6.0_BETA'
+
+    testCompile project(":CodeAPI")
     testCompile project(path: ':CodeAPI', configuration: 'tests')
 }
 
