--- a/build.gradle
+++ b/build.gradle
@@ -17,15 +17,17 @@ buildscript {
 }
 
 group 'com.github.jonathanxd'
-version '4.0.0.2-beta-bytecode'
+version '4.0.0.6-beta-bytecode'
 
 apply from: project(":CodeAPI").file("gradle/common.gradle")
 
 dependencies {
     compileOnly project(":CodeAPI")
-    runtime "com.github.JonathanxD:CodeAPI:4.0.0.2-beta"
+    runtime "com.github.JonathanxD:CodeAPI:4.0.0.6-beta"
     compile 'com.github.JonathanxD:BytecodeDisassembler:2.0.5'
-    compile group: 'org.ow2.asm', name: 'asm-all', version: '6.0_BETA'
+    compile "org.ow2.asm:asm:6.0"
+    compile "org.ow2.asm:asm-tree:6.0"
+    compile "org.ow2.asm:asm-util:6.0"
 
     testCompile project(":CodeAPI")
     testCompile project(path: ':CodeAPI', configuration: 'tests')
