--- a/build.gradle
+++ b/build.gradle
@@ -10,14 +10,14 @@ buildscript {
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.dokka:dokka-gradle-plugin:$dokka_version"
-        classpath "gradle.plugin.nl.javadude.gradle.plugins:license-gradle-plugin:$license_version"
+        classpath "gradle.plugin.com.hierynomus.gradle.plugins:license-gradle-plugin:$license_version"
         classpath "com.github.jengelman.gradle.plugins:shadow:$shadow_version"
     }
 
 }
 
 group 'com.github.jonathanxd'
-version '4.0.0.36-beta-bytecode'
+version '4.0.0.37-beta-bytecode'
 
 apply from: project(":Kores").file("gradle/common.gradle")
 
@@ -27,7 +27,7 @@ dependencies {
     // with runtime dependency pointing to Kores published version
     //compile project(":Kores")
     compileOnly project(":Kores")
-    runtime "com.github.JonathanxD.Kores:Kores:4.0.0.45-beta"
+    runtime "com.github.JonathanxD.Kores:Kores:4.0.0.52-beta"
     compile 'com.github.JonathanxD:BytecodeDisassembler:2.1.0'
     compile "org.ow2.asm:asm:6.0"
     compile "org.ow2.asm:asm-analysis:6.0"
