Updated Kores-Base to 4.0.1

--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ buildscript {
 }
 
 group 'com.github.jonathanxd'
-version '4.0.0.43-beta-bytecode'
+version '4.0.1.bytecode'
 
 apply from: project(":Kores").file("gradle/common.gradle")
 
@@ -27,7 +27,7 @@ dependencies {
     // with runtime dependency pointing to Kores published version
     //compile project(":Kores")
     compileOnly project(":Kores")
-    runtime "com.github.JonathanxD.Kores:Kores:4.0.0.60-beta"
+    runtime "com.github.JonathanxD.Kores:Kores:4.0.1.base"
     compile 'com.github.JonathanxD:BytecodeDisassembler:2.1.1'
     compile "org.ow2.asm:asm:6.0"
     compile "org.ow2.asm:asm-analysis:6.0"
@@ -39,7 +39,7 @@ dependencies {
     testCompile project(path: ':Kores', configuration: 'tests')
 }
 
-dokka {
+tasks.dokkaGfm.configure {
     enabled = false
 }
 
