--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ buildscript {
 }
 
 group 'com.koresframework'
-version '4.2.3.bytecode'
+version '4.2.3.bytecode.1'
 
 apply from: project(":Kores").file("gradle/common.gradle")
 
