--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ buildscript {
 }
 
 group 'com.koresframework'
-version '4.2.11.bytecode'
+version '4.2.12.bytecode'
 
 apply from: file("commons/common.gradle")
 
@@ -27,30 +27,22 @@ apply plugin: 'maven-publish'
 
 repositories {
     mavenCentral()
-    // JwIUtils
     maven {
-        url "https://gitlab.com/api/v4/projects/28895078/packages/maven"
-    }
-    // BytecodeDisassembler
-    maven {
-        url 'https://gitlab.com/api/v4/projects/28905629/packages/maven'
-    }
-    // Kores
-    maven {
-        url 'https://gitlab.com/api/v4/projects/28894889/packages/maven'
+        name = "JGang"
+        url "https://gitlab.com/api/v4/projects/30392813/packages/maven"
     }
 }
 
 dependencies {
-    implementation "com.koresframework:kores:4.2.8.base"
-    implementation 'com.github.jonathanxd:bytecode-disassembler:2.4.1'
+    implementation "com.koresframework:kores:4.2.16.base"
+    implementation 'com.github.jonathanxd:bytecode-disassembler:2.4.2'
     implementation "org.ow2.asm:asm:9.2"
     implementation "org.ow2.asm:asm-analysis:9.2"
     implementation "org.ow2.asm:asm-tree:9.2"
     implementation "org.ow2.asm:asm-util:9.2"
 
     testImplementation "com.github.jonathanxd:links:$iutils_version"
-    testImplementation "com.koresframework:kores-test:4.2.4.base"
+    testImplementation "com.koresframework:kores-test:4.2.16.base"
 }
 
 tasks.dokkaGfm.configure {
